<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlSkyLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66ccff"
    tools:context=".SkylineActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        tools:listitem="@layout/item_star"/>

    <ImageView
        android:id="@+id/ivSun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sun"
        android:paddingEnd="0dp"
        android:paddingStart="100dp"
        android:paddingTop="65dp"
        android:src="@drawable/sun"/>

    <ImageView
        android:id="@+id/ivCloud1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cloud"
        android:paddingEnd="0dp"
        android:paddingStart="170dp"
        android:paddingTop="90dp"
        android:src="@drawable/cloud"/>

    <ImageView
        android:id="@+id/ivCloud2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cloud"
        android:paddingEnd="0dp"
        android:paddingStart="200dp"
        android:paddingTop="140dp"
        android:src="@drawable/cloud"/>

    <ImageView
        android:id="@+id/ivBird"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/bird"
        android:paddingTop="120dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/bird"/>

    <ImageView
        android:id="@+id/ground"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/ground"
        android:paddingTop="40dp"
        android:src="@drawable/ground"/>

    <ImageView
        android:id="@+id/window"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/window"
        android:src="@drawable/window"/>

    <ImageView
        android:id="@+id/ivWheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/wheel"
        android:padding="3dp"
        android:src="@drawable/steering_wheel"/>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>